Refactor the home UI

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -15,3 +15,20 @@
     from { width: 0 }
     to { width: 100% }
 }
+@keyframes gradient-border {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+  
+  .animate-gradient-border {
+    background-size: 200% 200%;
+    animation: gradient-border 6s linear infinite;
+  }
+  
