--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -45,4 +45,16 @@
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
 }
+@keyframes marquee {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.animate-marquee {
+  animation: marquee 20s linear infinite;
+}
 
